Fix N+1 Queries, Consolidate PaymentDraft, and Migrate to Java 21 Virtual Threads Fix N+1 queries in GRN, Procurement, and RequestItem services; replace per-item repository calls with batch findAllByIds. Consolidate PaymentDraft into Payment with PaymentStage lifecycle (V13–V16 migrations); remove PaymentDraftService and PaymentDraft entity. Migrate AsyncConfig to virtual threads (spring.threads.virtual.enabled=true) and bump compiler/CI target to Java 21. Fix cache correctness: correct stale evictions across endorsement, approval, cancellation, and bulk operations; remove evictions targeting non-existent cache names. Fix async event dispatch in RequestItemService: replace null-initialized variable pattern with try-catch around publishEvent. Fix filterFinalQuotation mutating managed JPA collection via removeIf. Refactor specification classes into GenericSpecification; remove domain-specific specification files. Add DashboardSseBroadcaster and DashboardSseEventListener for real-time dashboard push on GRN, LPO, and cancellation events. Add ProcurementMcpTools MCP server integration. Add RequestStageLabel enum and per-stage timestamps to TrackRequestDto. Fix DatabaseBackupScheduler: capture stderr, create backup directory, log errors with exit code. Add V17–V27 Flyway migrations (sequences, views, aging analysis, auditor fields, LPO reports, dashboard views). Expand integration test suite: SecurityAccessControlTest, PaymentControllerTest, DashboardControllerTest, ReportControllerTest, AsyncConfigTest, GenericSpecificationTest, and others.